Fix bullet spacing

--- a/assets/adobe/css/corp-reveal-theme.scss
+++ b/assets/adobe/css/corp-reveal-theme.scss
@@ -670,7 +670,7 @@ $selection-color: #fff;
   margin-left: 37px;
   list-style-type: none;
   position: relative;
-  :not(:first-child) {
+  &:not(:first-child) {
       margin-block-start: 36px;
   }
 }
